swimgoals_frontend/src/app/styles/FormGroup.scss
@use 'variables';

.add-group-container {
    position: fixed;
        left: 5%;
        transform: translate(-50%, -50%);
        margin: 10px;
        font-family: variables.$global-font-family;

    .main-container {
        display: flex;
        justify-content: center;
        align-items: variables.$align-center;

        .add-group-card {
            background: variables.$white;
            border-radius: 15px;
            padding: 20px;
            width: 90%;
            min-width: 320px;
            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
            margin-top: 50px;
            text-align: center;

            .title-card {
                font-size: 30px;
                margin-bottom: 15px;
                font-weight: 700;
                color: variables.$global-blue;
            }

            .form-add-group {
                display: flex;
                flex-direction: column;
                gap: 15px;
                align-items: variables.$align-center;

                .label-group {
                    font-size: 16px;
                    color: variables.$global-blue;
                    text-align: left;
                    width: 100%;
                    text-align: center;                }

                .input-group {
                    width: 50%;
                    padding: 0 0 5px 0;
                    font-size: 16px;
                    border: none;
                    border-bottom: 1px solid variables.$global-blue;
                    background: transparent;
                    outline: none;
                    color: #333;
                }

                button {
                    width: 60%;
                    padding: 10px 0;
                    background-color: variables.$global-blue;
                    color: white;
                    border: none;
                    border-radius: 25px;
                    font-size: 16px;
                    cursor: pointer;
                    transition: background 0.3s;
                    text-align: center;
                }
            }
        }
    }
}

